--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>mall-order</module>
         <module>mall-product</module>
         <module>renren-fast-master</module>
+        <module>renren-generator-master</module>
+        <module>mall-commons</module>
     </modules>
 
 </project>
