--- a/mall-product/src/main/resources/application.properties
+++ b/mall-product/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.56.10:12345/mall-pms
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis-plus.global-config.db-config.id-type=auto
