--- a/renren-fast-master/src/main/resources/application.yml
+++ b/renren-fast-master/src/main/resources/application.yml
@@ -37,8 +37,14 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
   mvc:
     throw-exception-if-no-handler-found: true
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  application:
+    name: renren-fast
 #  resources:
 #    add-mappings: false
 
